--- a/Views/Persons/Details.cshtml
+++ b/Views/Persons/Details.cshtml
@@ -11,6 +11,12 @@
     <hr />
     <dl  style="color:white" class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Id)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.LastName)
         </dt>
         <dd class = "col-sm-10">
